# style-transfer-app

./: .gitignore  README.md  main.cpp  requirements.txt  setup_script.sh
src/framework/include/: CMakeLists.txt  ImageUI.cpp  bmphash.cpp  bmplocations.cpp  cpp2python.cpp  cpp2python.h  libraries.h  resizebmp.h
src/libraries/: CMakeLists.txt
src/libraries/fslazywindow/src/: CMakeLists.txt
src/libraries/fslazywindow/src/macosx_linux_win/: fslazywindow.cpp
src/libraries/fssimplewindow/src/: CMakeLists.txt  fssimplewindow.h
src/libraries/fssimplewindow/src/glx/: fsglxwrapper.cpp
src/libraries/fssimplewindow/src/macosx/: fsmacosxwrapperobjc.m
src/libraries/fssimplewindow/src/windows/: fswin32wrapper.cpp
src/libraries/simplebitmap/: CMakeLists.txt  simplebitmap.cpp  simplebitmap.h  simplebitmaptemplate.h  yspng.cpp  yspng.h  yspngenc.cpp  yspngenc.h
src/libraries/ysbitmapfont/src/: CMakeLists.txt  ysglsldrawfontbitmap.c  ysglsldrawfontbitmap.h  ysglusefontbitmap.c
src/libraries/ysclass/src/: CMakeFiles  CMakeLists.txt  build32and64.bat  parallelbuild.bat  parallelrebuild.bat  push.bat  ysadvgeometry.cpp  ysadvgeometry.h  ysarraymask.h  ysclass.h  ysdef.h  yseditarray.h  ysgeometry.h  yslattice.h  yspositivearea.cpp  yspositivearea.h  yspositivevector.cpp  yspositivevector.h  yspropertyfile.cpp  yspropertyfile.h  yssegarray.h  ysshell.cpp  ysshell.h  ysshellfileio.cpp  ysshellutil.cpp  ysstring.h  ystextdata.h
src/libraries/ysgl/src/: CMakeLists.txt  ysglheader.h  ysglsl3ddrawing.c  ysglslprogram.c  ysglslsharedrenderer.c  ysglslsharedrenderer.h  ysglslutil.c
src/libraries/ysgl/src/glsl/: variColorBillBoard3DDrawingFragmentShader.glsl  variColorBillBoard3DDrawingVertexShader.glsl  variColorMarker3DDrawingFragmentShader.glsl  variColorMarker3DDrawingVertexShader.glsl  variColorMarkerByPointSprite3DDrawingFragmentShader.glsl  variColorMarkerByPointSprite3DDrawingVertexShader.glsl
src/libraries/ysgl/src/glsl_src/: YS_GLSL_ALPHA_CUTOFF_IN_FRAGMENT_SHADER.glsl  YS_GLSL_ALPHA_CUTOFF_PARAMETER.glsl  YS_GLSL_FOG_VARIABLES.glsl  (+31 more)
(+29 files in other folders)
